# MGitPython

./: ConfigProcessor.py  LICENSE  MANIFEST.in  MultiGit.py  README.md  TODO.md  ci.sh  mgit  mgit.yaml  pyproject.toml  requirements.txt  test_process_raw_config_file.py
mgitpy/: ConfigProcessor.py  MultiGit.py  main.py  mgit.yaml  requirements.txt  test_process_raw_config_file.py
mgitpy-test/: test_process_raw_config_file.py
