[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "MGitPython"
version = "0.8.2"
authors = [
    { name = "Włodzimierz Gajda", email = "gajdaw@gajdaw.pl" },
]
description = "CLI tool to work with multiple git repositories."
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "fire",
    "jinja2",
    "pyyaml",
    "setuptools",
]
keywords = [
    "cli",
    "git",
    "multiple",
    "repo",
]

license = { text = "MIT" }

[project.scripts]
cli-name = "mgitpy:main"

[tool.setuptools]
include-package-data = true
